--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "socialiteproviders/google": "^4.1",
+        "spatie/laravel-google-calendar": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
