--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "maatwebsite/excel": "^3.1",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-google-calendar": "^3.8"
     },
