--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,26 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laravel-notification-channels/webpush": "^10.2",
         "laravel/framework": "^12.0",
+        "laravel/reverb": "^1.5",
+        "laravel/sanctum": "^4.1",
         "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6",
+        "livewire/livewire": "^3.4",
+        "livewire/volt": "^1.7.0",
         "maatwebsite/excel": "^3.1",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-google-calendar": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "nunomaduro/collision": "^8.6"
     },
     "autoload": {
         "psr-4": {
