--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "1.29.9",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-google-calendar": "^3.8"
     },
