--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.10.1",
@@ -14,7 +15,8 @@
         "livewire/volt": "^1.7.0",
         "maatwebsite/excel": "^3.1",
         "socialiteproviders/google": "^4.1",
-        "spatie/laravel-google-calendar": "^3.8"
+        "spatie/laravel-google-calendar": "^3.8",
+        "spatie/laravel-permission": "^6.19"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
