--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,5 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd /www/wwwroot/presensi.sandbox.upaz.net.id
-            whoami
+            git reset --hard
+            git pull origin main
