--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.7.0",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^3.2",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-google-calendar": "^3.8",
         "spatie/laravel-permission": "^6.21"
