--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,12 +9,12 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "/icons/apple-touch-icon.png",
+            "src": "/apple-touch-icon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icons/apple-touch-icon.png",
+            "src": "/apple-touch-icon.png",
             "sizes": "512x512",
             "type": "image/png"
         }
