--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,8 @@
 {
     "name": "Absensi Karyawan",
     "short_name": "Absensi",
-    "start_url": "/",
-    "scope": "/",
+    "start_url": "/login",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#0fa64a",
-    "orientation": "portrait",
-    "icons": [
-        {
-            "src": "/apple-touch-icon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/apple-touch-icon.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+    "theme_color": "#0fa64a"
 }
